// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card matches snapshot when focused without note 1`] = `
.c0 {
  position: absolute;
  padding: 0.8rem;
  border-radius: 0.4rem;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.14),0 2px 2px 0 rgba(0,0,0,0.12),0 1px 3px 0 rgba(0,0,0,0.2);
  left: calc(100% - ((100% - 82.5rem) / 2) + 3rem);
  right: unset;
  top: 50px;
  left: calc(100% - ((100% - 82.5rem) / 2) + 1rem);
}

.c0::before {
  content: ' ';
  border-radius: 0.4rem 0 0 0.4rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 0.4rem;
  background-color: #fed200;
}

@media print {
  .c0 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c0::before {
    border-radius: 0.4rem 0.4rem 0 0;
    right: 0;
    bottom: unset;
    width: unset;
    height: 0.4rem;
  }
}

@media (max-width:103.75em) {
  .c0 {
    left: unset;
    right: 2rem;
    top: 150px;
  }
}

@media (max-width:82.8125em) {
  .c0 {
    left: unset;
    right: 2rem;
    top: 150px;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    left: 0;
    right: 0;
    bottom: 0;
    top: unset;
    position: fixed;
    padding: 0;
  }
}

<div
  authenticated={false}
  book={
    Object {
      "authors": Array [
        Object {
          "value": Object {
            "name": "Bam Bammerson",
            "senior_author": true,
          },
        },
      ],
      "id": "testbook1-uuid",
      "license": Object {
        "code": "sl",
        "name": "Sweet License",
        "url": "http://example.com",
        "version": "1.0",
      },
      "publish_date": "2012-06-21",
      "shortId": "testbook1-shortid",
      "slug": "book-slug-1",
      "theme": "blue",
      "title": "Test Book 1",
      "tree": Object {
        "contents": Array [
          Object {
            "id": "testbook1-testpage1-uuid@1.0",
            "shortId": "testpage1-shortid@1.0",
            "slug": "test-page-1",
            "title": "<span class=\\"os-text\\">Test Page 1</span>",
          },
          Object {
            "contents": Array [
              Object {
                "contents": Array [
                  Object {
                    "id": "testbook1-testpage2-uuid@1.0",
                    "shortId": "testpage2-shortid@1.0",
                    "slug": "1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units",
                    "title": "<span class=\\"os-text\\">Introduction to Science and the Realm of Physics, Physical Quantities, and Units</span>",
                  },
                ],
                "id": "testbook1-testchapter10@1.0",
                "shortId": "testchapter10@1.0",
                "slug": "testchapter10-slug",
                "title": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 1.1</span>",
              },
              Object {
                "id": "testbook1-testpage11-uuid@1.0",
                "shortId": "testpage11-shortid@1.0",
                "slug": "1-1-physics-an-introduction",
                "title": "<span class=\\"os-number\\">1.1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Physics: An Introduction</span></span>",
              },
              Object {
                "id": "testbook1-testpage8-uuid@1.0",
                "shortId": "testpage8-shortid@1.0",
                "slug": "23-12-rlc-series-ac-circuits",
                "title": "<span class=\\"os-number\\">23.12</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">RLC Series AC Circuits</span></span>",
              },
            ],
            "id": "testbook1-testchapter1-uuid@1.0",
            "shortId": "testchapter1@1.0",
            "slug": "testchapter1-slug",
            "title": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 1</span>",
          },
          Object {
            "contents": Array [
              Object {
                "id": "testbook1-testpage3-uuid@1.0",
                "shortId": "testpage3-shortid@1.0",
                "slug": "2-test-page-3",
                "title": "<span class=\\"os-text\\">Test Page 3</span>",
              },
            ],
            "id": "testbook1-testchapter2-uuid@1.0",
            "shortId": "testchapter2@1.0",
            "slug": "testchapter2-slug",
            "title": "<span class=\\"os-number\\">2</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 2</span>",
          },
          Object {
            "contents": Array [
              Object {
                "id": "testbook1-testpage4-uuid@1.0",
                "shortId": "testpage4-shortid@1.0",
                "slug": "3-test-page-4",
                "title": "<span class=\\"os-text\\">Test Page 4</span>",
              },
            ],
            "id": "testbook1-testchapter3-uuid@1.0",
            "shortId": "testchapter3@1.0",
            "slug": "testchapter3-slug",
            "title": "<span class=\\"os-number\\">3</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 3</span>",
          },
          Object {
            "contents": Array [
              Object {
                "id": "testbook1-testpage5-uuid@1.0",
                "shortId": "testpage5-shortid@1.0",
                "slug": "4-test-page-5",
                "title": "<span class=\\"os-text\\">Test Page 5</span>",
              },
            ],
            "id": "testbook1-testchapter4-uuid@1.0",
            "shortId": "testchapter4@1.0",
            "slug": "testchapter4-slug",
            "title": "<span class=\\"os-number\\">4</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 4</span>",
          },
          Object {
            "contents": Array [
              Object {
                "id": "testbook1-testpage6-uuid@1.0",
                "shortId": "testpage6-shortid@1.0",
                "slug": "10-test-page-6",
                "title": "<span class=\\"os-text\\">Test Page 6</span>",
              },
            ],
            "id": "testbook1-testchapter5-uuid@1.0",
            "shortId": "testchapter5@1.0",
            "slug": "testchapter5-slug",
            "title": "<span class=\\"os-number\\">10</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 5</span>",
          },
          Object {
            "contents": Array [
              Object {
                "id": "testbook1-testpage7-uuid@1.0",
                "shortId": "testpage7-shortid@1.0",
                "slug": "12-test-page-7",
                "title": "<span class=\\"os-text\\">Test Page 7</span>",
              },
            ],
            "id": "testbook1-testchapter6-uuid@1.0",
            "shortId": "testchapter6@1.0",
            "slug": "testchapter6-slug",
            "title": "<span class=\\"os-number\\">12</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 6</span>",
          },
          Object {
            "id": "testbook1-testpage9-uuid@1.0",
            "shortId": "testpage9-shortid@1.0",
            "slug": "a-atomic-masses",
            "title": "<span class=\\"os-number\\">A</span><span class=\\"os-divider\\"> | </span><span class=\\"os-text\\">Atomic Masses</span></a>",
          },
          Object {
            "id": "testbook1-testpage10-uuid@1.0",
            "shortId": "testpage10-shortid@1.0",
            "slug": "d-glossary-of-key-symbols-and-notation",
            "title": "<span class=\\"os-number\\">D</span><span class=\\"os-divider\\"> | </span><span class=\\"os-text\\">Glossary of Key Symbols and Notation</span></a>",
          },
          Object {
            "id": "testbook1-testpage12-uuid@1.0",
            "shortId": "testpage12-shortid@1.0",
            "slug": "test-page-for-generic-styles",
            "title": "<span class=\\"os-text\\">Test Page for Generic Styles</span>",
          },
        ],
        "id": "testbook1-uuid@1.0",
        "shortId": "testbook1-shortid@1.0",
        "slug": "testbook1-slug",
        "title": "Test Book 1",
      },
      "version": "1.0",
    }
  }
  className="c0"
  data={
    Object {
      "color": "yellow",
      "id": "asdf",
    }
  }
  highlight={
    Object {
      "elements": Array [
        <span />,
      ],
      "focus": [MockFunction],
      "getStyle": [MockFunction],
      "id": "asdf",
      "range": Object {
        "commonAncestorContainer": null,
        "getBoundingClientRect": [MockFunction] {
          "calls": Array [
            Array [],
            Array [],
            Array [],
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": Object {
                "bottom": 200,
                "top": 100,
              },
            },
            Object {
              "type": "return",
              "value": Object {
                "bottom": 200,
                "top": 100,
              },
            },
            Object {
              "type": "return",
              "value": Object {
                "bottom": 200,
                "top": 100,
              },
            },
            Object {
              "type": "return",
              "value": Object {
                "bottom": 200,
                "top": 100,
              },
            },
          ],
        },
      },
      "serialize": [Function],
      "setStyle": [MockFunction],
    }
  }
  isFocused={true}
  locationFilterId="testbook1-testpage1-uuid"
  loginLink="/accounts/login?r=/"
  mock-edit={true}
  onBlur={[Function]}
  onCancel={[Function]}
  onCreate={[Function]}
  onRemove={[Function]}
  onSave={[Function]}
  pageId="testbook1-testpage1-uuid"
/>
`;

exports[`Card matches snapshot when passed data without note 1`] = `
.c0 {
  position: absolute;
  padding: 0.8rem;
  border-radius: 0.4rem;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.14),0 2px 2px 0 rgba(0,0,0,0.12),0 1px 3px 0 rgba(0,0,0,0.2);
  left: calc(100% - ((100% - 82.5rem) / 2) + 3rem);
  right: unset;
  top: 0px;
  display: none;
}

@media print {
  .c0 {
    display: none;
  }
}

@media (max-width:103.75em) {
  .c0 {
    display: none;
    left: calc(100% - ((100% - 82.5rem) / 2) + 3rem);
    right: unset;
    top: 0px;
    display: none;
  }
}

@media (max-width:110.3125em) {
  .c0 {
    display: none;
  }
}

@media (max-width:82.8125em) {
  .c0 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    display: none;
  }
}

<div
  authenticated={false}
  book={
    Object {
      "authors": Array [
        Object {
          "value": Object {
            "name": "Bam Bammerson",
            "senior_author": true,
          },
        },
      ],
      "id": "testbook1-uuid",
      "license": Object {
        "code": "sl",
        "name": "Sweet License",
        "url": "http://example.com",
        "version": "1.0",
      },
      "publish_date": "2012-06-21",
      "shortId": "testbook1-shortid",
      "slug": "book-slug-1",
      "theme": "blue",
      "title": "Test Book 1",
      "tree": Object {
        "contents": Array [
          Object {
            "id": "testbook1-testpage1-uuid@1.0",
            "shortId": "testpage1-shortid@1.0",
            "slug": "test-page-1",
            "title": "<span class=\\"os-text\\">Test Page 1</span>",
          },
          Object {
            "contents": Array [
              Object {
                "contents": Array [
                  Object {
                    "id": "testbook1-testpage2-uuid@1.0",
                    "shortId": "testpage2-shortid@1.0",
                    "slug": "1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units",
                    "title": "<span class=\\"os-text\\">Introduction to Science and the Realm of Physics, Physical Quantities, and Units</span>",
                  },
                ],
                "id": "testbook1-testchapter10@1.0",
                "shortId": "testchapter10@1.0",
                "slug": "testchapter10-slug",
                "title": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 1.1</span>",
              },
              Object {
                "id": "testbook1-testpage11-uuid@1.0",
                "shortId": "testpage11-shortid@1.0",
                "slug": "1-1-physics-an-introduction",
                "title": "<span class=\\"os-number\\">1.1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Physics: An Introduction</span></span>",
              },
              Object {
                "id": "testbook1-testpage8-uuid@1.0",
                "shortId": "testpage8-shortid@1.0",
                "slug": "23-12-rlc-series-ac-circuits",
                "title": "<span class=\\"os-number\\">23.12</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">RLC Series AC Circuits</span></span>",
              },
            ],
            "id": "testbook1-testchapter1-uuid@1.0",
            "shortId": "testchapter1@1.0",
            "slug": "testchapter1-slug",
            "title": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 1</span>",
          },
          Object {
            "contents": Array [
              Object {
                "id": "testbook1-testpage3-uuid@1.0",
                "shortId": "testpage3-shortid@1.0",
                "slug": "2-test-page-3",
                "title": "<span class=\\"os-text\\">Test Page 3</span>",
              },
            ],
            "id": "testbook1-testchapter2-uuid@1.0",
            "shortId": "testchapter2@1.0",
            "slug": "testchapter2-slug",
            "title": "<span class=\\"os-number\\">2</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 2</span>",
          },
          Object {
            "contents": Array [
              Object {
                "id": "testbook1-testpage4-uuid@1.0",
                "shortId": "testpage4-shortid@1.0",
                "slug": "3-test-page-4",
                "title": "<span class=\\"os-text\\">Test Page 4</span>",
              },
            ],
            "id": "testbook1-testchapter3-uuid@1.0",
            "shortId": "testchapter3@1.0",
            "slug": "testchapter3-slug",
            "title": "<span class=\\"os-number\\">3</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 3</span>",
          },
          Object {
            "contents": Array [
              Object {
                "id": "testbook1-testpage5-uuid@1.0",
                "shortId": "testpage5-shortid@1.0",
                "slug": "4-test-page-5",
                "title": "<span class=\\"os-text\\">Test Page 5</span>",
              },
            ],
            "id": "testbook1-testchapter4-uuid@1.0",
            "shortId": "testchapter4@1.0",
            "slug": "testchapter4-slug",
            "title": "<span class=\\"os-number\\">4</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 4</span>",
          },
          Object {
            "contents": Array [
              Object {
                "id": "testbook1-testpage6-uuid@1.0",
                "shortId": "testpage6-shortid@1.0",
                "slug": "10-test-page-6",
                "title": "<span class=\\"os-text\\">Test Page 6</span>",
              },
            ],
            "id": "testbook1-testchapter5-uuid@1.0",
            "shortId": "testchapter5@1.0",
            "slug": "testchapter5-slug",
            "title": "<span class=\\"os-number\\">10</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 5</span>",
          },
          Object {
            "contents": Array [
              Object {
                "id": "testbook1-testpage7-uuid@1.0",
                "shortId": "testpage7-shortid@1.0",
                "slug": "12-test-page-7",
                "title": "<span class=\\"os-text\\">Test Page 7</span>",
              },
            ],
            "id": "testbook1-testchapter6-uuid@1.0",
            "shortId": "testchapter6@1.0",
            "slug": "testchapter6-slug",
            "title": "<span class=\\"os-number\\">12</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 6</span>",
          },
          Object {
            "id": "testbook1-testpage9-uuid@1.0",
            "shortId": "testpage9-shortid@1.0",
            "slug": "a-atomic-masses",
            "title": "<span class=\\"os-number\\">A</span><span class=\\"os-divider\\"> | </span><span class=\\"os-text\\">Atomic Masses</span></a>",
          },
          Object {
            "id": "testbook1-testpage10-uuid@1.0",
            "shortId": "testpage10-shortid@1.0",
            "slug": "d-glossary-of-key-symbols-and-notation",
            "title": "<span class=\\"os-number\\">D</span><span class=\\"os-divider\\"> | </span><span class=\\"os-text\\">Glossary of Key Symbols and Notation</span></a>",
          },
          Object {
            "id": "testbook1-testpage12-uuid@1.0",
            "shortId": "testpage12-shortid@1.0",
            "slug": "test-page-for-generic-styles",
            "title": "<span class=\\"os-text\\">Test Page for Generic Styles</span>",
          },
        ],
        "id": "testbook1-uuid@1.0",
        "shortId": "testbook1-shortid@1.0",
        "slug": "testbook1-slug",
        "title": "Test Book 1",
      },
      "version": "1.0",
    }
  }
  className="c0"
  data={
    Object {
      "id": "asdf",
    }
  }
  highlight={
    Object {
      "elements": Array [
        <span />,
      ],
      "focus": [MockFunction],
      "getStyle": [MockFunction],
      "id": "asdf",
      "range": Object {
        "commonAncestorContainer": null,
        "getBoundingClientRect": [MockFunction],
      },
      "serialize": [Function],
      "setStyle": [MockFunction],
    }
  }
  isFocused={false}
  locationFilterId="testbook1-testpage1-uuid"
  loginLink="/accounts/login?r=/"
  mock-edit={true}
  onBlur={[Function]}
  onCancel={[Function]}
  onCreate={[Function]}
  onRemove={[Function]}
  onSave={[Function]}
  pageId="testbook1-testpage1-uuid"
/>
`;

exports[`Card matches snapshot without data 1`] = `
.c0 {
  position: absolute;
  padding: 0.8rem;
  border-radius: 0.4rem;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.14),0 2px 2px 0 rgba(0,0,0,0.12),0 1px 3px 0 rgba(0,0,0,0.2);
  left: calc(100% - ((100% - 82.5rem) / 2) + 3rem);
  right: unset;
  top: 100px;
  display: none;
}

@media print {
  .c0 {
    display: none;
  }
}

@media (max-width:103.75em) {
  .c0 {
    display: none;
  }
}

@media (max-width:82.8125em) {
  .c0 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    display: none;
  }
}

<div
  authenticated={false}
  book={
    Object {
      "authors": Array [
        Object {
          "value": Object {
            "name": "Bam Bammerson",
            "senior_author": true,
          },
        },
      ],
      "id": "testbook1-uuid",
      "license": Object {
        "code": "sl",
        "name": "Sweet License",
        "url": "http://example.com",
        "version": "1.0",
      },
      "publish_date": "2012-06-21",
      "shortId": "testbook1-shortid",
      "slug": "book-slug-1",
      "theme": "blue",
      "title": "Test Book 1",
      "tree": Object {
        "contents": Array [
          Object {
            "id": "testbook1-testpage1-uuid@1.0",
            "shortId": "testpage1-shortid@1.0",
            "slug": "test-page-1",
            "title": "<span class=\\"os-text\\">Test Page 1</span>",
          },
          Object {
            "contents": Array [
              Object {
                "contents": Array [
                  Object {
                    "id": "testbook1-testpage2-uuid@1.0",
                    "shortId": "testpage2-shortid@1.0",
                    "slug": "1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units",
                    "title": "<span class=\\"os-text\\">Introduction to Science and the Realm of Physics, Physical Quantities, and Units</span>",
                  },
                ],
                "id": "testbook1-testchapter10@1.0",
                "shortId": "testchapter10@1.0",
                "slug": "testchapter10-slug",
                "title": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 1.1</span>",
              },
              Object {
                "id": "testbook1-testpage11-uuid@1.0",
                "shortId": "testpage11-shortid@1.0",
                "slug": "1-1-physics-an-introduction",
                "title": "<span class=\\"os-number\\">1.1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Physics: An Introduction</span></span>",
              },
              Object {
                "id": "testbook1-testpage8-uuid@1.0",
                "shortId": "testpage8-shortid@1.0",
                "slug": "23-12-rlc-series-ac-circuits",
                "title": "<span class=\\"os-number\\">23.12</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">RLC Series AC Circuits</span></span>",
              },
            ],
            "id": "testbook1-testchapter1-uuid@1.0",
            "shortId": "testchapter1@1.0",
            "slug": "testchapter1-slug",
            "title": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 1</span>",
          },
          Object {
            "contents": Array [
              Object {
                "id": "testbook1-testpage3-uuid@1.0",
                "shortId": "testpage3-shortid@1.0",
                "slug": "2-test-page-3",
                "title": "<span class=\\"os-text\\">Test Page 3</span>",
              },
            ],
            "id": "testbook1-testchapter2-uuid@1.0",
            "shortId": "testchapter2@1.0",
            "slug": "testchapter2-slug",
            "title": "<span class=\\"os-number\\">2</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 2</span>",
          },
          Object {
            "contents": Array [
              Object {
                "id": "testbook1-testpage4-uuid@1.0",
                "shortId": "testpage4-shortid@1.0",
                "slug": "3-test-page-4",
                "title": "<span class=\\"os-text\\">Test Page 4</span>",
              },
            ],
            "id": "testbook1-testchapter3-uuid@1.0",
            "shortId": "testchapter3@1.0",
            "slug": "testchapter3-slug",
            "title": "<span class=\\"os-number\\">3</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 3</span>",
          },
          Object {
            "contents": Array [
              Object {
                "id": "testbook1-testpage5-uuid@1.0",
                "shortId": "testpage5-shortid@1.0",
                "slug": "4-test-page-5",
                "title": "<span class=\\"os-text\\">Test Page 5</span>",
              },
            ],
            "id": "testbook1-testchapter4-uuid@1.0",
            "shortId": "testchapter4@1.0",
            "slug": "testchapter4-slug",
            "title": "<span class=\\"os-number\\">4</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 4</span>",
          },
          Object {
            "contents": Array [
              Object {
                "id": "testbook1-testpage6-uuid@1.0",
                "shortId": "testpage6-shortid@1.0",
                "slug": "10-test-page-6",
                "title": "<span class=\\"os-text\\">Test Page 6</span>",
              },
            ],
            "id": "testbook1-testchapter5-uuid@1.0",
            "shortId": "testchapter5@1.0",
            "slug": "testchapter5-slug",
            "title": "<span class=\\"os-number\\">10</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 5</span>",
          },
          Object {
            "contents": Array [
              Object {
                "id": "testbook1-testpage7-uuid@1.0",
                "shortId": "testpage7-shortid@1.0",
                "slug": "12-test-page-7",
                "title": "<span class=\\"os-text\\">Test Page 7</span>",
              },
            ],
            "id": "testbook1-testchapter6-uuid@1.0",
            "shortId": "testchapter6@1.0",
            "slug": "testchapter6-slug",
            "title": "<span class=\\"os-number\\">12</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 6</span>",
          },
          Object {
            "id": "testbook1-testpage9-uuid@1.0",
            "shortId": "testpage9-shortid@1.0",
            "slug": "a-atomic-masses",
            "title": "<span class=\\"os-number\\">A</span><span class=\\"os-divider\\"> | </span><span class=\\"os-text\\">Atomic Masses</span></a>",
          },
          Object {
            "id": "testbook1-testpage10-uuid@1.0",
            "shortId": "testpage10-shortid@1.0",
            "slug": "d-glossary-of-key-symbols-and-notation",
            "title": "<span class=\\"os-number\\">D</span><span class=\\"os-divider\\"> | </span><span class=\\"os-text\\">Glossary of Key Symbols and Notation</span></a>",
          },
          Object {
            "id": "testbook1-testpage12-uuid@1.0",
            "shortId": "testpage12-shortid@1.0",
            "slug": "test-page-for-generic-styles",
            "title": "<span class=\\"os-text\\">Test Page for Generic Styles</span>",
          },
        ],
        "id": "testbook1-uuid@1.0",
        "shortId": "testbook1-shortid@1.0",
        "slug": "testbook1-slug",
        "title": "Test Book 1",
      },
      "version": "1.0",
    }
  }
  className="c0"
  highlight={
    Object {
      "elements": Array [
        <span />,
      ],
      "focus": [MockFunction],
      "getStyle": [MockFunction],
      "id": "asdf",
      "range": Object {
        "commonAncestorContainer": null,
        "getBoundingClientRect": [MockFunction] {
          "calls": Array [
            Array [],
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": Object {
                "bottom": 200,
                "top": 100,
              },
            },
            Object {
              "type": "return",
              "value": Object {
                "bottom": 200,
                "top": 100,
              },
            },
          ],
        },
      },
      "serialize": [Function],
      "setStyle": [MockFunction],
    }
  }
  isFocused={false}
  locationFilterId="testbook1-testpage1-uuid"
  loginLink="/accounts/login?r=/"
  mock-edit={true}
  onBlur={[Function]}
  onCancel={[Function]}
  onCreate={[Function]}
  onRemove={[Function]}
  onSave={[Function]}
  pageId="testbook1-testpage1-uuid"
/>
`;
